--- a/src/Actio.Services.Activities/Actio.Services.Activities.csproj
+++ b/src/Actio.Services.Activities/Actio.Services.Activities.csproj
@@ -10,6 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="RawRabbit" Version="2.0.0-rc1" />
+    <PackageReference Include="RawRabbit.DependencyInjection.ServiceCollection" Version="2.0.0-rc1" />
+    <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc1" />
+    <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc1" />
   </ItemGroup>
 
   <ItemGroup>
