--- a/src/Actio.Services.Activities/appsettings.Development.json
+++ b/src/Actio.Services.Activities/appsettings.Development.json
@@ -6,5 +6,31 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "rabbitmq": {
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672,
+    "Hostnames": [
+      "127.0.0.1"
+    ],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
   }
 }
