--- a/src/Actio.Services.Activities/appsettings.json
+++ b/src/Actio.Services.Activities/appsettings.json
@@ -12,6 +12,11 @@
       }
     }
   },
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database":"Action-Services-Activities",
+    "seed": true
+  },
   "rabbitmq": {
     "Username": "guest",
     "Password": "guest",
